--- a/prework-study-guide/assets/style.css
+++ b/prework-study-guide/assets/style.css
@@ -2,30 +2,46 @@
     margin: 0;
     padding: 0;
 }
-header,
-footer {
-    width: 100%;
-    height: 120 px;
-    Background-color: blue;
-    color: white;
-}
-h1,
-h2 {
-    text-align: center;
-}
+
 img {
     display: block;
-    height: 50 px;
-    width: 50 px;
+    height: 50px;
+    width: 50px;
     margin-left: auto;
     margin-right: auto;
 }
-ul,
-ol {
-    padding-left: 40 px;
-    font-size: 20 px;
+
+header,
+footer  {
+    width: 100%;
+    height: 120px;
+    Background-color: blue;
+    color: white;
 }
-p {
+
+h1,
+h2  {
     text-align: center;
-    font-size: 30 px;
+}
+
+h3{
+    text-decoration: underline;
+}
+
+ul,
+ol  {
+    padding-left: 40px;
+    font-size: 20px;
+}
+
+p   {
+    text-align: center;
+    font-size: 30px;
+}
+
+.card {
+    width: 80%;
+    margin: 40px auto;
+    border: 5px solid gray;
+    box-shadow: 5px 10px #888888;
 }
